2008-12-23  Nick Clifton  <nickc@redhat.com>

	PR 7093
	* elf32-arm.c (bfd_elf32_arm_init_maps): Only process ARM ELF
	object files.

2008-12-23  Tristan Gingold  <gingold@adacore.com>

	* mach-o.c (bfd_mach_o_make_bfd_section): Use the standard ELF name
	.eh_frame for __TEXT.__eh_frame so that it is recognized by gdb.
	Use shorter sections name for well known sections.
	(bfd_mach_o_scan_read_dylinker): Only put dylinker name in the
	section content.
	(bfd_mach_o_scan_read_segment): Use shorter sections name for
	well known segments.
	(bfd_mach_o_scan_read_command): Ignore some new commands.
	(bfd_mach_o_openr_next_archived_file): Use more descriptive names
	for members filename.
	(bfd_mach_o_fat_extract): New function to easily extract members
	of a fat binary.
	* mach-o.h (bfd_mach_o_load_command_type): Add new constants.
	(bfd_mach_o_dylinker_command): Fix comment and reindent.
	(bfd_mach_o_fat_extract): New prototype.

2008-12-23  Johan Olmutz Nielsen  <jnielsen@ddci.com>

	* coffcode.h (coff_write_object_contents): Always initialise
	section.s_page.

2008-12-23  Andreas Schwab  <schwab@suse.de>

	* elf32-m68k.c (elf_m68k_discard_copies): Use SYMBOL_CALLS_LOCAL.
	(elf_m68k_relocate_section): Use SYMBOL_CALLS_LOCAL and
	SYMBOL_REFERENCES_LOCAL.
	(elf_m68k_relocate_section): Likewise.

2008-12-23  Nick Clifton  <nickc@redhat.com>

	* elf-bfd.h (struct bfd_elf_section_data): Remove indirect_relocs
	field.
	(_bfd_elf_make_ifunc_reloc_section): Remove prototype.
	* elf.c (swap_out_syms): Remove STT_IFUNC support.
	(elf_find_function): Likewise.
	* elf32-arm.c (arm_elf_find_function): Likewise.
	(elf32_arm_adjust_dynamic_symbol): Likewise.
	(elf32_arm_swap_symbol_in): Likewise.
	(elf32_arm_is_function_type): Likewise.
	* elf32-i386.c (is_indirect_symbol): Delete.
	(elf_i386_check_relocs): Remove STT_IFUNC support.
	(allocate_dynrelocs): Likewise.
	(elf_i386_relocate_section): Likewise.
	* elf64-x86-64.c (is_indirect_symbol): Delete.